<resources>
    <string name="app_name">MonitoringTendePay</string>
    <string name="welcome_ian">Welcome ian</string>
    <string name="search">Search</string>
    <string name="pending_transactions_textview">Pending transactions</string>
    <string name="total_transactions_textview">Total transactions</string>
    <string name="search_transaction_textview">Search Transaction</string>
    <string name="welcoming_textview">Welcome Ian!</string>
    <string name="recent_transactions_textview">Recent Transactions</string>
    <string name="view_more_textview">View more</string>
    <string name="success">success</string>
    <string name="_00_00">00:00</string>
    <string name="sqc45756u">sqc45756u</string>
    <string name="_07">07*******</string>
    <string name="dashboard">Dashboard</string>
    <string name="reports">Reports</string>
    <string name="users">Users</string>
    <string name="profile">Profile</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="phoneNumber">Phonenumber</string>
    <string name="status">Status</string>
    <string name="reference_id">MpesaReference</string>
    <string name="date_and_time">Date And Time</string>
    <string name="generate_report">Generate Report</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_user">Add User</string>
    <string name="search_users">Search users</string>
    <string name="username">Username</string>
    <string name="createdat">created At</string>
    <string name="createdBy">Created By</string>
    <string name="Role">Role</string>
    <string name="Actions">Actions</string>
    <string name="history">Transactions History</string>
    <string name="reportss">Reports</string>
    <string name="payments">Payments</string>
    <string name="all_transactions">All Transactions</string>
    <string name="phone_number">Phonenumber\n</string>
    <string name="history_title">History</string>
    <string name="reporthistory">Reports</string>
    <string name="paymentshistory">Payments</string>
    <string name="payments_report">Generate payments report and export for further analysis</string>
    <string name="manage_users">Manage Users</string>
    <string name="hhistory">History</string>
    <string name="s">Payments</string>
    <string name="all_sessions">All Sessions</string>
    <string name="phone">Phone</string>
</resources>