<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:layout_centerInParent="true"
xmlns:app="http://schemas.android.com/apk/res-auto">

<TextView
    android:id="@+id/initiatorPhoneTextView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="59dp"
    android:layout_marginTop="443dp"
    android:text="@string/_07"
    android:gravity="top"
    android:textSize="21sp"
    android:fontFamily="@font/josefinsansregular"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<TextView
    android:id="@+id/mpesaRefSessionIdTextView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="148dp"
    android:layout_marginTop="443dp"
    android:text="@string/sqc45756u"
    android:textSize="21sp"
    android:fontFamily="@font/josefinsansregular"
    android:gravity="top"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<TextView
    android:id="@+id/dateTimeTextView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="263dp"
    android:layout_marginTop="443dp"
    android:text="@string/_00_00"
    android:textSize="21sp"
    android:fontFamily="@font/josefinsansregular"
    android:gravity="top"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<TextView
    android:id="@+id/paymentStatusTextView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="338dp"
    android:layout_marginTop="444dp"
    android:text="@string/success"
    android:textSize="21sp"
    android:fontFamily="@font/josefinsansregular"
    android:gravity="top"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
