<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/white"
    tools:context=".presentation.activities.History">

    <TextView
        android:id="@+id/history_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/josefinsansregular"
        android:gravity="top"
        android:text="@string/history"
        android:textColor="#6C2671"
        android:textSize="28dp" />

    <RelativeLayout
        android:id="@+id/toggle_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/history_title"
        >

        <androidx.cardview.widget.CardView
            android:id="@+id/cardPaymentsReport"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="32dp"
            android:layout_marginStart="20dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="8dp">



            <RelativeLayout
                android:id="@+id/payments_report"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:background="@drawable/bg1"
                android:focusable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="Sessions"
                    android:textColor="#FFFFFF"
                    android:fontFamily="@font/josefinsansregular"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardReportHistory"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:layout_marginTop="32dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="8dp">



            <RelativeLayout
                android:id="@+id/paymentsHistory"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:background="@drawable/bg1"
                android:focusable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="Payments"
                    android:textColor="#FFFFFF"
                    android:fontFamily="@font/josefinsansregular"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>

    <TextView
        android:id="@+id/transactions_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/josefinsansregular"
        android:paddingHorizontal="40dp"
        android:layout_marginBottom="20dp"
        android:text="@string/all_transactions"
        android:textColor="@color/black"
        android:layout_below="@id/toggle_switch" />

    <LinearLayout
        android:id="@+id/recycler_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/transactions_label"
        android:background="@color/white"
        android:weightSum="4">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/phone_number_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/josefinsansregular"
                android:text="@string/phone_number"
                android:textColor="@color/black"
                android:textSize="11.5sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/reference_id_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/josefinsansregular"
                android:text="@string/reference_id"
                android:textColor="@color/black"
                android:textSize="11.5sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/status_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/josefinsansregular"
                android:text="@string/status"
                android:textColor="@color/black"
                android:textSize="11.5sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/time_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/josefinsansregular"
                android:text="@string/date_and_time"
                android:textColor="@color/black"
                android:textSize="11.5sp" />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/recycler_label"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            tools:listitem="@layout/item_payment" />
    </LinearLayout>

    <include
        android:id="@+id/bottom_navigation"
        layout="@layout/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />

</RelativeLayout>
