<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@drawable/bg5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.activities.History"
    >


    <TextView
        android:id="@+id/history_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/josefinsansregular"
        android:gravity="top"
        android:text="@string/history"
        android:textColor="#6C2671"
        android:textSize="28dp" />

    <RelativeLayout
        android:id="@+id/toggle_switch"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:paddingHorizontal="35dp"
        android:layout_below="@id/history_title"
        >

        <androidx.cardview.widget.CardView
            android:id="@+id/cardPaymentsReport"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="32dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="0dp">



            <RelativeLayout
                android:id="@+id/payments_report"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:background="@drawable/bg1"
                android:focusable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="Sessions"
                    android:textColor="#FFFFFF"
                    android:fontFamily="@font/josefinsansregular"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardReportHistory"
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="32dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="0dp">



            <RelativeLayout
                android:id="@+id/paymentsHistory"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:background="@drawable/bg12"
                android:focusable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="Payments"
                    android:textColor="#FFFFFF"
                    android:fontFamily="@font/josefinsansregular"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>

    <TextView
        android:id="@+id/transactions_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/josefinsansregular"
        android:paddingHorizontal="40dp"
        android:layout_marginBottom="20dp"
        android:text="@string/all_transactions"
        android:textColor="@color/black"
        android:layout_below="@id/toggle_switch" />








    <androidx.cardview.widget.CardView
        android:background="@color/white"
        android:id="@+id/recyclercard"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="0dp"
        app:cardElevation="0dp"
        android:elevation="40dp"
        android:layout_below="@+id/transactions_label"
        android:layout_centerHorizontal="true"
        >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            >

            <View
                android:id="@+id/rectangle_7"
                android:layout_width="295dp"
                android:layout_height="304dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="66dp"
                android:layout_marginTop="462dp"
                android:elevation="4dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="6">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:fontFamily="@font/josefinsansregular"
                        android:text="@string/username"
                        android:textColor="@color/black"
                        android:textSize="11.5sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/createdAt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:fontFamily="@font/josefinsansregular"
                        android:text="@string/createdat"
                        android:textColor="@color/black"
                        android:textSize="11.5sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/role"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:fontFamily="@font/josefinsansregular"
                        android:text="@string/Role"
                        android:textColor="@color/black"
                        android:textSize="11.5sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/status_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:fontFamily="@font/josefinsansregular"
                        android:text="@string/status"
                        android:textColor="@color/black"
                        android:textSize="11.5sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">


                    <TextView
                        android:id="@+id/createdBy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:fontFamily="@font/josefinsansregular"
                        android:text="@string/createdBy"
                        android:textColor="@color/black"
                        android:textSize="11.5sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/actions"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:fontFamily="@font/josefinsansregular"
                        android:text="@string/Actions"
                        android:textColor="@color/black"
                        android:textSize="11.5sp" />
                </RelativeLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:background="@color/white"
                    android:id="@+id/usersRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    tools:listitem="@layout/item_added_users" />
            </LinearLayout>


        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_below="@id/recyclercard"
        >


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:foregroundGravity="bottom"
        app:menu="@menu/bottom_navigation_menu" />
    </RelativeLayout>








</RelativeLayout>